--- a/index.html
+++ b/index.html
@@ -19,37 +19,12 @@
                     <h1 class="h3 mb-4 px-3">
                         Bootcamp Inteligencia Artificial
                     </h1>
-                    <ul class="nav flex-column">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#roadmap">
-                                <i class="bi bi-map me-2"></i>
-                                Roadmap
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#pildoras">
-                                <i class="bi bi-megaphone"></i>
-                                Píldoras
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#horario">
-                                <i class="bi bi-clock"></i>
-                                Horario
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#calendar">
-                                <i class="bi bi-calendar me-2"></i>
-                                Calendario
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#link">
-                                <i class="bi bi-lightning-charge"></i>
-                                Quick Links
-                            </a>
-                        </li>
+                    <ul class="nav">
+                        <li class="nav-item"><a class="nav-link" href="#roadmap"><i class="bi bi-map me-2"></i>Roadmap</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#pildoras"><i class="bi bi-megaphone"></i>  Píldoras</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#calendar"><i class="bi bi-calendar me-2"></i>Calendario</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#horario"><i class="bi bi-clock"></i>  Horario</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#link"><i class="bi bi-lightning-charge"></i> Quick Links</a></li>
                     </ul>
                 </div>
             </nav>
@@ -75,28 +50,25 @@
                                             <li class="list-inline-item">
                                                 <span class="badge project">
                                                     <i class="bi bi-briefcase-fill"></i> | <i
-                                                        class="bi bi-person-fill"></i> Proyectos individual de coder de
+                                                        class="bi bi-person-fill"></i> Proyectos individual |
                                                     temática abierta
                                                 </span>
                                             </li>
                                             <li class="list-inline-item">
                                                 <span class="badge project">
                                                     <i class="bi bi-briefcase-fill"></i> | <i
-                                                        class="bi bi-people-fill"></i> Proyectos en grupo de coders de
-                                                    temática abierta
+                                                        class="bi bi-people-fill"></i> Proyectos en grupo | temática abierta
                                                 </span>
                                             </li>
                                             <li class="list-inline-item">
                                                 <span class="badge temas">
-                                                    <i class="bi bi-book-fill"></i> Temas (Impartidos por coders a
-                                                    través de píldoras individuales y grupales con apoyo de formadores y
-                                                    colaboraciones externas)
+                                                    <i class="bi bi-book-fill"></i> Temas (Impartidos por coders)
                                                 </span>
 
                                             </li>
                                             <li class="list-inline-item">
                                                 <span class="badge integracion">
-                                                    <i class="bi bi-diagram-3-fill"></i> Integración y evaluación
+                                                    <i class="bi bi-diagram-3-fill"></i> Integración
                                                     (Evaluación, eventos, vacaciones, etc.)
                                                 </span>
 
@@ -117,11 +89,10 @@
                                     <h5 class="card-title">
                                         <i class="bi bi-megaphone"></i> Píldoras
                                     </h5>
-                                    <div class="card-text">
-                                        Las píldoras se asignarán la primera semana, se apuntará en el calendario y se
-                                        recomienda que cunmplan con lo siguiente:
+                                    <div>
+                                        Las píldoras se asignarán la primera semana, se apuntarán en el calendario y se recomienda que cumplan con lo siguiente:
                                     </div>
-
+                                    <br/>
                                     <div>
                                         <ul>
                                             <li>Que tenga un poco de inglés (hablado no solo en la presentación)</li>
@@ -134,32 +105,6 @@
                             </div>
                         </div>
 
-                        <!-- Horario -->
-                        <div class="col-12" id="horario">
-                            <div class="card">
-                                <div class="card-body">
-                                    <h5 class="card-title">
-                                        <i class="bi bi-clock"></i> Horario
-                                    </h5>
-                                    <div class="card-text">
-                                        En el Google Calendar encontraran la hora de inicio y fin de la clase, tanto para los días presenciales como para los días online, sin embargo les recordamos:
-                                    </div>
-
-                                    <div>
-                                        <ul>
-                                            <li>La puntualidad es importante, recuerden que ingrean a las: 8:30</li>
-                                            <li>Tienen dos descansos de 15 minutos cada uno durante la jornada:
-                                                <ul>
-                                                    <li>A las 11:00 de la mañana</li>
-                                                    <li>A las 13:00 de la mañana</li>
-                                                </ul>
-                                            </li>
-                                            <li> Descansar también es importante, recuerden que finalizan a las 15:30</li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
 
                         <!-- Calendar -->
 
@@ -175,6 +120,33 @@
                                             style="border:solid 1px #777" width="800" height="600" frameborder="0"
                                             scrolling="no">
                                         </iframe>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Horario -->
+                        <div class="col-12" id="horario">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title">
+                                        <i class="bi bi-clock"></i> Horario
+                                    </h5>
+                                    <div >
+                                        En el Google Calendar encontraran la hora de inicio y fin de la clase, tanto para los días presenciales como para los días online, sin embargo les recordamos:
+                                    </div>
+                                    <br/>
+                                    <div>
+                                        <ul>
+                                            <li>La puntualidad es importante, recuerden que ingrean a las: 8:30</li>
+                                            <li>Tienen dos descansos de 15 minutos cada uno durante la jornada:
+                                                <ul>
+                                                    <li>A las 11:00 de la mañana</li>
+                                                    <li>A las 13:00 de la mañana</li>
+                                                </ul>
+                                            </li>
+                                            <li> Descansar también es importante, recuerden que finalizan a las 15:30</li>
+                                        </ul>
                                     </div>
                                 </div>
                             </div>
